--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,14 +3,9 @@
 
 <!-- hero section -->
 <section id="home" data-magellan-target="home">
-
   <div class="hero hero-bg-image">
     <div class="hero-content">
-
-      <img class="logo-hero hide-for-small-only" src="../assets/img/tjc_transparent_logo block_small_white.png" class="thumbnail" alt="">
-
       <h1 class="hero-title">Thunder Jones</h1>
-
       <p class="hero-description">Commercial Structural Concrete </p>
       <div class="hero-ctas">
         <a href="#projects" class="hero-section-cta button" data-smooth-scroll id="hero-project-button">Projects</a>
@@ -18,7 +13,6 @@
       </div>
     </div>
   </div>
-
 </section>
 <!-- /hero section -->
 
@@ -43,7 +37,7 @@
         projects on time and above standards.
       </p>
 
-      <p>TJC Contracting hopes to have an opportunity to work with your company to accomplish your goals.</p>
+      <p>TJC Contracting hopes to have an opportunity to work with your company to accomplish your project goals.</p>
     </div>
   </div>
 </section>
