fixed text in vista page

--- a/src/pages/project1_thevue.html
+++ b/src/pages/project1_thevue.html
@@ -87,7 +87,8 @@
 <!-- Project Description and Overview -->
 <section class="project">
 
-  <div class="grid-x grid-padding-x">
+  <!-- <div class="grid-x grid-padding-x"> -->
+  <div class="grid-x"> 
     <div class="medium-6 large-4 cell">
       <div class="project-spec">
 
