--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,15 +29,12 @@
   <div class="grid-x grid-padding-x about">
     <div class="medium-6 large-4 cell">
 
-      <h4>Commercial Structural Concrete Expertise in Southern California Since 1998</h4></div>
+      <h4>Commercial Structural Concrete Expertise in Southern California</h4></div>
     <div class="medium-6 large-8 cell">
 
-      <p>Founded by Kevin Thunder and Brian Jones, <strong>Thunder-Jones Contracting (TJC) Group, Inc. </strong> serves Southern California with quality structural concrete construction. TJC prides itself in friendly business practices, safe work zones,
-        and specialization in tilt-up, cast-in-place walls and elevated decks, and slab on grade concrete projects. With a combined 45 years of experience in the San Diego Construction industry, Kevin and Brian have created a dynamic team to complete
-        projects on time and above standards.
+      <p>Founded in 2000 by Kevin Thunder and Brian Jones, Thunder Jones Contracting Group, Inc. has transformed from a small two-man company to one with over 70 employees. Brian and Kevin have worked closely together in shaping the company and they share
+        the common values of fair practices, moral integrity, and job site safety. They both live in North San Diego County with their families.
       </p>
-
-      <p>TJC Contracting hopes to have an opportunity to work with your company to accomplish your project goals.</p>
     </div>
   </div>
 </section>
@@ -66,12 +63,14 @@
     </div>
 
     <div class="small-12 medium-6 large-6 cell bio-left">
-      <h3 class="bio-name text-center">Brian Jones | Partner</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+      <h3 class="bio-name text-center">Brian Jones | President</h3>
+      <p>Brian graduated from SDSU’s Civil Engineering program in 1983. From there he worked with commercial construction companies before joining a highway construction contractor where he was the project manager on various freeway and bridge projects.
+      </p>
     </div>
     <div class="small-12 medium-6 large-6 cell bio-right">
-      <h3 class="bio-name text-center">Kevin Thunder | Partner</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem</p>
+      <h3 class="bio-name text-center">Kevin Thunder | CFO, Licensed Civil Engineer</h3>
+      <p>Kevin graduated from SDSU’s Civil Engineering program in 1983. Following graduation he went directly into the highway construction industry where he also managed large freeway and bridge projects.
+      </p>
 
     </div>
 
